# demo

image_process/: CMakeLists.txt  image_process.cc  n1-1808-drmdisp.sh  n1-1808-rockx-drmdisp.sh  n4-csi-1808-csi-3399.sh
image_process/resource/: pose_finger-pose_body.desktop
npu_uvc_connection/: CMakeLists.txt  npu_pp_output.cc  npu_pp_output.h  npu_uvc_device.cc  npu_uvc_device.sh  npu_uvc_host.cc  npu_uvc_host.sh  npu_uvc_shared.h
npu_uvc_connection/device/: npu_uvc_device.cc  npu_uvc_device.sh
npu_uvc_connection/host/: npu_pp_output.cc  npu_pp_output.h  npu_uvc_host.cc  npu_uvc_host.sh  rknn_ssd.cc  rknn_ssd.h  rockx_draw.cc  rockx_draw.h
rmsl/: rmsl_api.h
tools/: astyle.sh  clang-format.sh
